version/0.52/_sources/examples/00-read_binary/load_corner_result.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-read_binary/load_corner_result.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-read_binary_load_corner_result.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-read_binary_load_corner_result.py:


.. _ref_load_cylindrical_result:

Cylindrical Nodal Stress
~~~~~~~~~~~~~~~~~~~~~~~~
Visualize the nodal stress in the radial direction.  This is
equivalent to setting the result coordinate system to cylindrical in
MAPDL (e.g. ``RSYS, 1``).

.. GENERATED FROM PYTHON SOURCE LINES 12-13

Download a small result file containing the corner of a thick pipe

.. GENERATED FROM PYTHON SOURCE LINES 13-25

.. code-block:: default

    from ansys.mapdl.reader import examples

    rst = examples.download_corner_pipe()

    # obtain the cylindrical_nodal_stress
    nnum, stress = rst.cylindrical_nodal_stress(0)
    print(stress)

    # contains results for each node in following directions
    # R, THETA, Z, RTHETA, THETAZ, and RZ
    print(stress.shape)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [[ 7.94594941e-02  5.55927717e-01  5.56718485e-03  6.97496325e-10
      -2.56250392e-10 -6.05982346e-03]
     [ 8.13450519e-02  5.72433063e-01  1.58490917e-02 -2.23391931e-09
       1.28759924e-10 -6.77734173e-03]
     [ 8.23295392e-02  5.78101967e-01  2.50045424e-02 -1.92234743e-09
       4.66417052e-10 -3.87984037e-03]
     [ 7.94594929e-02  5.55927715e-01  5.56718386e-03 -1.26438356e-09
      -2.08493836e-10 -6.05982419e-03]
     [ 8.13450560e-02  5.72433059e-01  1.58490917e-02  1.34862066e-09
       6.03860117e-11 -6.77734037e-03]
     [ 8.23295428e-02  5.78101971e-01  2.50045417e-02  8.38401223e-10
       3.78141262e-11 -3.87983945e-03]
     [ 7.94595015e-02  5.55927718e-01  5.56718669e-03 -1.65827532e-09
       2.30367328e-10 -6.05982295e-03]
     [ 8.13450565e-02  5.72433055e-01  1.58490935e-02 -1.52728899e-10
       1.06830835e-10 -6.77734103e-03]
     [ 8.23295446e-02  5.78101971e-01  2.50045416e-02 -4.07121149e-09
      -2.04463608e-10 -3.87983998e-03]
     [ 7.94594976e-02  5.55927720e-01  5.56718657e-03 -2.61497117e-09
       8.83996498e-11 -6.05982280e-03]
     [ 8.13450510e-02  5.72433062e-01  1.58490923e-02  1.96021048e-09
       3.86914797e-11 -6.77734166e-03]
     [ 8.23295409e-02  5.78101968e-01  2.50045424e-02  2.46976510e-09
      -1.43618419e-10 -3.87984031e-03]
     [ 8.87091703e-02  4.59186449e-01  1.66381133e-03 -5.02383458e-09
      -1.60154584e-10 -8.10663546e-03]
     [ 9.07571895e-02  4.70760860e-01  4.51115718e-03 -1.05676679e-09
       5.74114898e-10 -8.65319758e-03]
     [ 9.18382045e-02  4.73520921e-01  5.93209270e-03  5.07137166e-10
       7.26839140e-10 -4.98656422e-03]
     [ 8.87091697e-02  4.59186461e-01  1.66381063e-03  2.07484194e-09
      -2.15857085e-11 -8.10663672e-03]
     [ 9.07571806e-02  4.70760853e-01  4.51115755e-03 -1.81641346e-09
      -8.37350857e-11 -8.65319645e-03]
     [ 9.18382015e-02  4.73520922e-01  5.93209150e-03 -5.36238963e-10
       3.88171092e-10 -4.98656246e-03]
     [ 8.87091769e-02  4.59186459e-01  1.66381196e-03 -5.68798779e-10
       4.78672585e-10 -8.10663501e-03]
     [ 9.07571848e-02  4.70760853e-01  4.51115792e-03  3.01230522e-09
      -2.10931730e-10 -8.65319774e-03]
     [ 9.18382033e-02  4.73520920e-01  5.93209319e-03 -3.93500788e-11
      -3.11633190e-10 -4.98656366e-03]
     [ 8.87091672e-02  4.59186449e-01  1.66381088e-03  3.55227127e-09
       1.68405052e-10 -8.10663473e-03]
     [ 9.07571852e-02  4.70760858e-01  4.51115676e-03 -3.11956252e-09
       2.65914504e-10 -8.65319731e-03]
     [ 9.18382055e-02  4.73520918e-01  5.93209319e-03  1.51184368e-09
       2.14204469e-10 -4.98656376e-03]
     [ 5.85472850e-02  3.78034674e-01 -7.80566066e-03 -2.39007356e-09
       1.72839215e-10 -5.78785978e-03]
     [ 6.02946419e-02  3.85057437e-01 -1.50803311e-02  9.37961653e-11
       5.39665012e-10 -6.08616244e-03]
     [ 6.08111414e-02  3.85435925e-01 -2.07263989e-02 -3.18295973e-10
       3.02412191e-10 -3.43262973e-03]
     [ 5.85472895e-02  3.78034666e-01 -7.80566086e-03  1.50064637e-09
      -2.08513324e-10 -5.78786087e-03]
     [ 6.02946388e-02  3.85057437e-01 -1.50803316e-02  7.53562178e-10
      -4.79118759e-11 -6.08616216e-03]
     [ 6.08111448e-02  3.85435927e-01 -2.07263989e-02  3.91285032e-10
       2.15709391e-10 -3.43262908e-03]
     [ 5.85472913e-02  3.78034668e-01 -7.80565877e-03 -1.50064641e-09
      -6.89914575e-12 -5.78786010e-03]
     [ 6.02946387e-02  3.85057436e-01 -1.50803290e-02  5.75048398e-10
      -1.58096145e-10 -6.08616316e-03]
     [ 6.08111454e-02  3.85435924e-01 -2.07263979e-02 -5.24003875e-10
       2.88734970e-10 -3.43263019e-03]
     [ 5.85472850e-02  3.78034672e-01 -7.80566043e-03 -4.17711504e-10
       4.68632815e-10 -5.78786002e-03]
     [ 6.02946402e-02  3.85057437e-01 -1.50803308e-02 -6.41213846e-10
       4.90737978e-10 -6.08616330e-03]
     [ 6.08111403e-02  3.85435925e-01 -2.07263989e-02  4.21315011e-10
       2.08799835e-10 -3.43263001e-03]
     [ 5.66615585e-02  3.54433909e-01 -3.90467152e-03  2.84210851e-09
       1.04672754e-10 -4.64996730e-03]
     [ 5.66615608e-02  3.54433913e-01 -3.90467152e-03 -2.98461726e-09
       3.35786148e-10 -4.64996736e-03]
     [ 5.66615655e-02  3.54433908e-01 -3.90467118e-03  5.92833629e-10
       8.04593098e-11 -4.64996947e-03]
     [ 5.66615593e-02  3.54433907e-01 -3.90467187e-03 -3.08032294e-10
      -3.29512209e-10 -4.64996660e-03]
     [ 8.42371955e-02  4.28242493e-01 -4.09502012e-04  1.61005315e-09
       5.31505810e-10 -6.15455753e-03]
     [ 8.42372001e-02  4.28242496e-01 -4.09503467e-04  1.66410784e-09
       7.95745204e-10 -6.15455883e-03]
     [ 8.42372001e-02  4.28242496e-01 -4.09501896e-04 -1.66410788e-09
       1.14388251e-10 -6.15456177e-03]
     [ 8.42371988e-02  4.28242492e-01 -4.09500150e-04  1.02896483e-10
      -5.67613489e-10 -6.15455926e-03]
     [ 7.51031509e-02  5.17567541e-01  1.39431038e-03  1.38344521e-09
       5.48035091e-10 -4.71270879e-03]
     [ 7.51031475e-02  5.17567547e-01  1.39430864e-03  9.52412385e-10
       2.07411998e-10 -4.71271025e-03]
     [ 7.51031536e-02  5.17567548e-01  1.39430969e-03  3.74172718e-09
       3.72010009e-10 -4.71271119e-03]
     [ 7.51031543e-02  5.17567542e-01  1.39431120e-03 -2.47828057e-09
       5.04978896e-10 -4.71271101e-03]
     [ 8.26492777e-02  5.79265250e-01  2.83471416e-02 -4.51453157e-09
       2.36542253e-10 -2.06176758e-03]
     [ 8.26492818e-02  5.79265246e-01  2.83471430e-02 -2.58292920e-09
       1.07162391e-12 -2.06176663e-03]
     [ 8.26492818e-02  5.79265246e-01  2.83471416e-02  2.58292913e-09
      -6.23733443e-10 -2.06176665e-03]
     [ 8.26492744e-02  5.79265249e-01  2.83471420e-02  3.41969622e-09
      -2.35222744e-10 -2.06176670e-03]
     [ 9.21708186e-02  4.73800090e-01  6.53025229e-03  1.73645029e-09
       4.11205880e-10 -2.56675241e-03]
     [ 9.21708174e-02  4.73800095e-01  6.53025135e-03  1.59721999e-09
       7.69526926e-10 -2.56675123e-03]
     [ 9.21708148e-02  4.73800090e-01  6.53025118e-03  1.94574159e-09
       1.76522231e-10 -2.56675181e-03]
     [ 9.21708197e-02  4.73800091e-01  6.53025304e-03 -4.35576908e-10
      -3.37859949e-10 -2.56675238e-03]
     [ 6.10960596e-02  3.84948154e-01 -2.30269383e-02  1.13092352e-09
       4.12122543e-10 -1.72400597e-03]
     [ 6.10960557e-02  3.84948157e-01 -2.30269404e-02 -2.47138077e-09
      -1.52840640e-10 -1.72400468e-03]
     [ 6.10960604e-02  3.84948154e-01 -2.30269397e-02  2.20594312e-09
       5.55512421e-10 -1.72400551e-03]
     [ 6.10960575e-02  3.84948148e-01 -2.30269390e-02  1.53849414e-09
       1.30364558e-10 -1.72400575e-03]
     [ 3.73892273e-02  3.16232878e-01 -4.72982060e-02 -2.27388257e-09
      -8.03438589e-10 -9.75680817e-04]
     [ 3.73892238e-02  3.16232881e-01 -4.72982060e-02 -1.49474724e-10
       4.95531454e-10 -9.75680995e-04]
     [ 3.73892238e-02  3.16232881e-01 -4.72982042e-02  1.49474724e-10
      -1.40328903e-10 -9.75681001e-04]
     [ 3.73892222e-02  3.16232877e-01 -4.72982042e-02  6.31629526e-10
       6.67137609e-10 -9.75681048e-04]
     [ 3.73892225e-02  3.16232890e-01 -4.72982079e-02 -4.53422442e-02
      -1.81781419e-04 -9.75681818e-04]
     [ 6.10960610e-02  3.84948164e-01 -2.30269404e-02 -5.26451990e-02
      -2.64831338e-04 -1.72400556e-03]
     [ 9.21708234e-02  4.73800093e-01  6.53025461e-03 -6.20010383e-02
      -3.97699536e-04 -2.56675319e-03]
     [ 8.26492794e-02  5.79265267e-01  2.83471439e-02 -8.06389824e-02
      -3.18602266e-04 -2.06176890e-03]
     [ 6.84085669e-02  7.63235048e-01  7.52007663e-02  6.11341783e-09
      -4.58961492e-10 -1.52254619e-03]
     [ 6.84085805e-02  7.63235046e-01  7.52007663e-02 -7.85522232e-09
      -9.61253738e-10 -1.52254640e-03]
     [ 6.84085702e-02  7.63235026e-01  7.52007663e-02 -6.31662418e-09
       4.47671424e-10 -1.52254649e-03]
     [ 6.84085786e-02  7.63235033e-01  7.52007738e-02 -1.12803794e-01
      -2.63912691e-04 -1.52254861e-03]
     [ 6.84085724e-02  7.63235046e-01  7.52007663e-02 -4.19443011e-09
       1.89955359e-09 -1.52254737e-03]
     [ 6.84085637e-02  7.63235033e-01  7.52007663e-02  1.12803794e-01
       2.63913797e-04 -1.52254617e-03]
     [ 8.26492719e-02  5.79265237e-01  2.83471392e-02  8.06389898e-02
       3.18602935e-04 -2.06176739e-03]
     [ 9.21708234e-02  4.73800093e-01  6.53025159e-03  6.20010439e-02
       3.97699914e-04 -2.56675202e-03]
     [ 6.10960536e-02  3.84948149e-01 -2.30269404e-02  5.26452027e-02
       2.64831462e-04 -1.72400568e-03]
     [ 3.73892151e-02  3.16232890e-01 -4.72982079e-02  4.53422442e-02
       1.81781361e-04 -9.75682109e-04]
     [ 8.23295396e-02  5.78101978e-01  2.50045420e-02  8.04553777e-02
       5.98753395e-04 -3.87983961e-03]
     [ 8.13450543e-02  5.72433069e-01  1.58490950e-02  7.95562472e-02
       1.05512895e-03 -6.77734055e-03]
     [ 7.94594940e-02  5.55927724e-01  5.56718517e-03  7.70112220e-02
       9.62311649e-04 -6.05982332e-03]
     [ 9.18382034e-02  4.73520920e-01  5.93209214e-03  6.19674176e-02
       7.77202244e-04 -4.98656405e-03]
     [ 9.07571875e-02  4.70760852e-01  4.51115935e-03  6.15671575e-02
       1.35596414e-03 -8.65319592e-03]
     [ 8.87091625e-02  4.59186450e-01  1.66380988e-03  5.98395634e-02
       1.29647508e-03 -8.10663321e-03]
     [ 6.08111406e-02  3.85435931e-01 -2.07263993e-02  5.27270501e-02
       5.29322064e-04 -3.43263033e-03]
     [ 6.02946393e-02  3.85057434e-01 -1.50803316e-02  5.26392329e-02
       9.41143793e-04 -6.08616165e-03]
     [ 5.85472863e-02  3.78034674e-01 -7.80565845e-03  5.15598804e-02
       9.15085409e-04 -5.78785868e-03]
     [ 5.66615649e-02  3.54433909e-01 -3.90466698e-03  4.92980462e-02
       7.58376400e-04 -4.64996649e-03]
     [ 8.42371993e-02  4.28242490e-01 -4.09501372e-04  5.69994394e-02
       1.01259156e-03 -6.15455909e-03]
     [ 7.51031525e-02  5.17567545e-01  1.39430491e-03  7.33424798e-02
       7.64517143e-04 -4.71270969e-03]
     [ 3.71580627e-02  3.17325860e-01 -4.23482452e-02  4.55180202e-02
       3.70411224e-04 -1.98128301e-03]
     [ 3.69127244e-02  3.19393590e-01 -2.78692674e-02  4.57972474e-02
       7.08276726e-04 -3.60154128e-03]
     [ 3.48990522e-02  2.97847480e-01 -1.21838506e-03  4.35078442e-02
       7.94068968e-04 -3.19488184e-03]
     [ 3.51378862e-02  3.16051379e-01 -9.99314699e-03  4.53143995e-02
       7.76499452e-04 -3.39433004e-03]
     [ 6.81264587e-02  7.60612130e-01  6.83596693e-02  1.12359818e-01
       4.67636681e-04 -2.77075742e-03]
     [ 6.75005950e-02  7.50099003e-01  4.95098326e-02  1.10597998e-01
       7.41252414e-04 -4.84739791e-03]
     [ 6.07051775e-02  6.71069741e-01  1.34122651e-02  1.01120435e-01
      -1.33504669e-04 -1.95811945e-03]
     [ 6.59270175e-02  7.24120528e-01  2.58897897e-02  1.06426604e-01
       4.50905500e-04 -4.52464516e-03]
     [ 6.59270106e-02  7.24120510e-01  2.58897895e-02 -3.45274792e-09
      -3.35672506e-10 -4.52464311e-03]
     [ 6.59270136e-02  7.24120524e-01  2.58897922e-02 -4.76202043e-09
       1.98013208e-10 -4.52464380e-03]
     [ 6.59270207e-02  7.24120517e-01  2.58897922e-02  2.45966436e-09
       8.03018410e-10 -4.52464302e-03]
     [ 6.59270121e-02  7.24120524e-01  2.58897920e-02 -9.26593580e-10
       8.39401796e-10 -4.52464278e-03]
     [ 6.75005951e-02  7.50099024e-01  4.95098317e-02  1.95246899e-09
      -8.97760893e-11 -4.84739904e-03]
     [ 6.75005880e-02  7.50098999e-01  4.95098308e-02  1.49433352e-09
      -7.56632812e-10 -4.84739775e-03]
     [ 6.75005905e-02  7.50099000e-01  4.95098308e-02  2.77147236e-10
       1.29741573e-10 -4.84739788e-03]
     [ 6.75005956e-02  7.50099021e-01  4.95098317e-02 -5.51370991e-09
      -1.12047756e-11 -4.84739968e-03]
     [ 6.81264680e-02  7.60612128e-01  6.83596693e-02  4.59440311e-09
       9.60063433e-10 -2.77075885e-03]
     [ 6.81264654e-02  7.60612142e-01  6.83596693e-02  2.02865948e-09
      -2.18105442e-10 -2.77075900e-03]
     [ 6.81264654e-02  7.60612142e-01  6.83596712e-02 -2.02865953e-09
      -6.77543863e-11 -2.77075858e-03]
     [ 6.81264619e-02  7.60612129e-01  6.83596674e-02 -4.72974462e-09
       3.68536058e-10 -2.77075913e-03]
     [ 6.07051779e-02  6.71069728e-01  1.34122665e-02 -2.16470214e-09
       2.19867150e-09 -1.95811921e-03]
     [ 6.07051752e-02  6.71069721e-01  1.34122656e-02  1.05283361e-08
       2.89447133e-09 -1.95811957e-03]
     [ 6.07051704e-02  6.71069719e-01  1.34122628e-02 -6.98537449e-09
      -1.10135177e-09 -1.95811956e-03]
     [ 6.07051779e-02  6.71069728e-01  1.34122586e-02  2.16470206e-09
      -2.24302965e-09 -1.95812020e-03]
     [ 6.07051738e-02  6.71069741e-01  1.34122632e-02 -1.01120435e-01
       1.33505964e-04 -1.95811596e-03]
     [ 6.59270100e-02  7.24120528e-01  2.58897883e-02 -1.06426604e-01
      -4.50904874e-04 -4.52464377e-03]
     [ 6.75005950e-02  7.50099003e-01  4.95098289e-02 -1.10597998e-01
      -7.41253170e-04 -4.84740024e-03]
     [ 6.81264587e-02  7.60612130e-01  6.83596693e-02 -1.12359818e-01
      -4.67636273e-04 -2.77076021e-03]
     [ 5.85472900e-02  3.78034674e-01 -7.80565751e-03 -5.15598832e-02
      -9.15084158e-04 -5.78785967e-03]
     [ 8.87091681e-02  4.59186450e-01  1.66381014e-03 -5.98395644e-02
      -1.29647566e-03 -8.10663437e-03]
     [ 7.94594903e-02  5.55927724e-01  5.56718512e-03 -7.70112220e-02
      -9.62312522e-04 -6.05982315e-03]
     [ 6.02946430e-02  3.85057434e-01 -1.50803289e-02 -5.26392339e-02
      -9.41142745e-04 -6.08616322e-03]
     [ 9.07571893e-02  4.70760852e-01  4.51115688e-03 -6.15671612e-02
      -1.35596358e-03 -8.65319837e-03]
     [ 8.13450580e-02  5.72433069e-01  1.58490892e-02 -7.95562509e-02
      -1.05512864e-03 -6.77734299e-03]
     [ 6.08111415e-02  3.85435924e-01 -2.07263976e-02 -5.27270483e-02
      -5.29322246e-04 -3.43263053e-03]
     [ 9.18381996e-02  4.73520920e-01  5.93209313e-03 -6.19674148e-02
      -7.77201065e-04 -4.98656434e-03]
     [ 8.23295396e-02  5.78101978e-01  2.50045434e-02 -8.04553740e-02
      -5.98752031e-04 -3.87984121e-03]
     [ 7.51031470e-02  5.17567545e-01  1.39431097e-03 -7.33424760e-02
      -7.64516561e-04 -4.71270666e-03]
     [ 8.42371956e-02  4.28242490e-01 -4.09500790e-04 -5.69994356e-02
      -1.01259263e-03 -6.15455653e-03]
     [ 5.66615611e-02  3.54433909e-01 -3.90466908e-03 -4.92980406e-02
      -7.58376625e-04 -4.64996748e-03]
     [ 3.71580645e-02  3.17325860e-01 -4.23482452e-02 -4.55180183e-02
      -3.70411093e-04 -1.98128412e-03]
     [ 3.69127281e-02  3.19393590e-01 -2.78692618e-02 -4.57972493e-02
      -7.08275853e-04 -3.60154186e-03]
     [ 3.48990485e-02  2.97847480e-01 -1.21837365e-03 -4.35078405e-02
      -7.94064312e-04 -3.19488533e-03]
     [ 3.51378862e-02  3.16051379e-01 -9.99313575e-03 -4.53143995e-02
      -7.76496658e-04 -3.39433004e-03]
     [ 3.71580594e-02  3.17325855e-01 -4.23482480e-02 -3.24078625e-10
      -1.03226800e-09 -1.98128159e-03]
     [ 3.71580647e-02  3.17325856e-01 -4.23482470e-02 -9.52803350e-10
      -1.94143346e-10 -1.98128193e-03]
     [ 3.71580611e-02  3.17325854e-01 -4.23482452e-02 -1.70441786e-09
       1.51943706e-10 -1.98128318e-03]
     [ 3.71580594e-02  3.17325855e-01 -4.23482452e-02  3.24078611e-10
       5.12703082e-10 -1.98128301e-03]
     [ 3.69127260e-02  3.19393590e-01 -2.78692660e-02  8.01379366e-10
       1.29953314e-10 -3.60154071e-03]
     [ 3.69127253e-02  3.19393585e-01 -2.78692702e-02 -2.07064373e-10
      -5.90053623e-10 -3.60154077e-03]
     [ 3.69127265e-02  3.19393586e-01 -2.78692651e-02  1.09280478e-09
      -4.53650441e-10 -3.60154181e-03]
     [ 3.69127270e-02  3.19393584e-01 -2.78692660e-02  1.93570900e-09
       2.93643563e-10 -3.60154226e-03]
     [ 3.51378816e-02  3.16051377e-01 -9.99314705e-03 -9.06722156e-10
       2.16988030e-09 -3.39433049e-03]
     [ 3.51378799e-02  3.16051378e-01 -9.99314967e-03 -2.25840839e-09
      -3.69907329e-10 -3.39433116e-03]
     [ 3.51378837e-02  3.16051383e-01 -9.99314262e-03 -3.98812823e-10
      -9.29513352e-10 -3.39432993e-03]
     [ 3.51378813e-02  3.16051376e-01 -9.99314542e-03 -1.20442517e-10
       4.31976485e-10 -3.39433066e-03]
     [ 3.48990485e-02  2.97847485e-01 -1.21838332e-03  1.08971859e-11
       2.76182765e-09 -3.19488393e-03]
     [ 3.48990508e-02  2.97847485e-01 -1.21838326e-03  2.90942656e-09
      -4.33359294e-10 -3.19488566e-03]
     [ 3.48990473e-02  2.97847488e-01 -1.21837825e-03 -1.75824855e-09
      -8.25598213e-10 -3.19488402e-03]
     [ 3.48990491e-02  2.97847486e-01 -1.21838006e-03  2.04343205e-09
       7.65919190e-10 -3.19488520e-03]]
    (150, 6)




.. GENERATED FROM PYTHON SOURCE LINES 26-27

plot cylindrical nodal stress in the radial direction

.. GENERATED FROM PYTHON SOURCE LINES 27-29

.. code-block:: default

    _ = rst.plot_cylindrical_nodal_stress(0, "R", show_edges=True, show_axes=True)




.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_corner_result_001.png
   :alt: load corner result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_corner_result_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 30-31

plot cylindrical nodal stress in the theta direction

.. GENERATED FROM PYTHON SOURCE LINES 31-35

.. code-block:: default

    _ = rst.plot_cylindrical_nodal_stress(
        0, "THETA", show_edges=True, show_axes=True, add_text=False
    )




.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_corner_result_002.png
   :alt: load corner result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_corner_result_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-37

Plot cartesian stress in the "X" direction

.. GENERATED FROM PYTHON SOURCE LINES 37-38

.. code-block:: default

    _ = rst.plot_nodal_stress(0, "X", show_edges=True, show_axes=True)



.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_corner_result_003.png
   :alt: load corner result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_corner_result_003.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.687 seconds)


.. _sphx_glr_download_examples_00-read_binary_load_corner_result.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: load_corner_result.py <load_corner_result.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: load_corner_result.ipynb <load_corner_result.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
